--- a/가사로 장르예측.ipynb
+++ b/가사로 장르예측.ipynb
@@ -1309,8 +1309,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from tensorflow.keras.layers import SimpleRNN,Embedding,Dense\n",
     "from tensorflow.keras.models import Sequential"
@@ -1318,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1327,9 +1329,9 @@
      "text": [
       "Train on 227 samples, validate on 57 samples\n",
       "Epoch 1/2\n",
-      "227/227 [==============================] - 1s 6ms/sample - loss: 0.5697 - acc: 0.2203 - val_loss: 0.3463 - val_acc: 0.1930\n",
+      "227/227 [==============================] - 1s 6ms/sample - loss: 0.5047 - acc: 0.2291 - val_loss: 0.3104 - val_acc: 0.1930\n",
       "Epoch 2/2\n",
-      "227/227 [==============================] - 0s 2ms/sample - loss: 0.4098 - acc: 0.2996 - val_loss: 0.2001 - val_acc: 0.1930\n"
+      "227/227 [==============================] - 0s 2ms/sample - loss: -0.1697 - acc: 0.3216 - val_loss: -0.4888 - val_acc: 0.1930\n"
      ]
     }
    ],
@@ -1347,14 +1349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "72/72 [==============================] - 0s 706us/sample - loss: 0.2876 - acc: 0.4444\n"
+      "72/72 [==============================] - 0s 887us/sample - loss: -0.2477 - acc: 0.4444\n"
      ]
     },
     {
@@ -1363,7 +1365,7 @@
        "0.44444445"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,6 +1416,7 @@
     "4. 일정하지 않은 label 값? 힙합이 훨씬 더 많았음\n",
     "5. 가사들에 토큰 수가 차이가 커서 패딩에서 정확도가 내려갔다.\n",
     "6. 가사만을 이용하였다..\n",
+    "7. RNN모델을 조금 더 다듬어야한다.\n",
     "을 생각해보았다. 더 있을까? 정확도를 올려보자.. ㅠ"
    ]
   },
